--- a/Mars Trail.htm
+++ b/Mars Trail.htm
@@ -6,20 +6,27 @@
 var game = new Kiwi.Game();
 var myState = new Kiwi.State('myState');
 
+
 myState.preload = function(){
     Kiwi.State.prototype.preload.call(this);
-  	this.addImage('logo','kiwilogo.png');
+  	this.addImage('mars','mars.png');
+	this.mouse = this.game.input.mouse;
 }
 
 myState.create = function(){
     Kiwi.State.prototype.create.call(this);
-		this.logo = new Kiwi.GameObjects.StaticImage(this, this.textures['logo'], 100, 100);
-		this.addChild(this.logo);
+		this.message = new Kiwi.GameObjects.Textfield(this, "You're almost there! Click on Mars to land your ship!", 0, 0);
+		this.mars = new Kiwi.GameObjects.StaticImage(this, this.textures['mars'], 100, 100);
+		this.addChild(this.message);
+		this.addChild(this.mars);
 }
 
 myState.update = function(){
    Kiwi.State.prototype.update.call(this);
-   this.logo.rotation+=0.01;
+   if (this.mouse.isDown && this.mars.box.bounds.contains(this.mouse.x, this.mouse.y, true)) {
+		this.message.text = "YOU HAVE DIED OF DYSENTERY";
+		this.mouse.reset();
+   }
 };
 
 game.states.addState(myState, true);
