Menu and Game Window Updates
- Centered game window using iframe.
- Added background graphic for menu screen.

--- a/Mars Trail.htm
+++ b/Mars Trail.htm
@@ -1,12 +1,14 @@
 <html>
-<body>
-<script src="src/kiwi.js"></script>
-<script src="src/marsloader.js"></script>
-<script src="src/intro.js"></script>
-<script src="src/menu.js"></script>
-<script src="src/gameover.js"></script>
-<script src="src/credits.js"></script>
-<script src="src/travel.js"></script>
-<script src="src/trail.js"></script>
-</body>
+    <head>
+        <script src="src/kiwi.js"></script>
+        <script src="src/marsloader.js"></script>
+        <script src="src/intro.js"></script>
+        <script src="src/menu.js"></script>
+        <script src="src/gameover.js"></script>
+        <script src="src/credits.js"></script>
+        <script src="src/travel.js"></script>
+        <script src="src/trail.js"></script>
+    </head>
+    <body style="margin:0">
+    </body>
 </html>
