added placeholder for asteroid field mini game
added placeholder for asteroid field navigation mini game, added global
game logic variable "cleared field" to indicate successful field
traversal

--- a/Mars Trail.htm
+++ b/Mars Trail.htm
@@ -1,12 +1,14 @@
 <html>
     <head>
         <script src="src/kiwi.js"></script>
+		<!-- <script src="src/kiwipreloader.js"></script> -->
         <script src="src/marsloader.js"></script>
         <script src="src/intro.js"></script>
         <script src="src/menu.js"></script>
         <script src="src/gameover.js"></script>
         <script src="src/credits.js"></script>
-        <script src="src/travel.js"></script>
+		<script src="src/travel.js"></script>
+		<script src="src/meteoroid_madness.js"></script>
         <script src="src/trail.js"></script>
     </head>
     <body style="margin:0">
