--- a/Mars Trail.htm
+++ b/Mars Trail.htm
@@ -11,7 +11,8 @@
         <script src="src/credits.js"></script>
 		<script src="src/travel.js"></script>
 		<script src="src/meteoroid_madness.js"></script>
-        <script src="src/trail.js"></script>
+        <script src="src/puzzle.js"></script>
+		<script src="src/trail.js"></script>
     </head>
     <body style="margin:0">
     </body>
