--- a/index.htm
+++ b/index.htm
@@ -3,10 +3,13 @@
 <html>
     <head>
         <title>The Mars Trail</title>
+		
+		<link href="Content/Styles/Main.css" rel="stylesheet" />
     </head>
+	
     <body>
-        <div style="width:900px; height:600px; margin-left:auto; margin-right:auto; margin-top:100px; border:gray solid 2px">
-            <iframe src="Mars Trail.htm" scrolling="no" style="width:900px; height:600px;" frameBorder="0"></iframe>
+        <div id="game">
+            <iframe src="Mars Trail.htm" scrolling="no" frameBorder="0"></iframe>
         </div>
     </body>
 </html>
